test/fixtures/valid/simple_echo.blade.php
<div>
    {{ $user->name }}
    {!! $html !!}
</div>
